fixed scrollbar bug datasets page

--- a/projects/mistral/frontend/app/components/datasets/datasets.component.scss
+++ b/projects/mistral/frontend/app/components/datasets/datasets.component.scss
@@ -31,7 +31,7 @@
 }
 
 .scrollDiv {
-  max-height: calc(100vh - 274px) !important;
+  max-height: calc(100vh - 300px) !important;
   overflow: auto;
 }
 
